; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_main.c_quit.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_main.c_quit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@iteration = common dso_local global i64 0, align 8
@stepsIteration = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@stepsQuit = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @quit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @quit(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @iteration, align 8
  %4 = load i64, i64* @stepsIteration, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @TRUE, align 4
  store i32 %7, i32* @stepsQuit, align 4
  br label %10

8:                                                ; preds = %1
  %9 = call i32 (...) @gtk_main_quit()
  br label %10

10:                                               ; preds = %8, %6
  %11 = load i32, i32* @FALSE, align 4
  ret i32 %11
}

declare dso_local i32 @gtk_main_quit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
